<resources>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="activate">Activate</string>
    <string name="agc_02CAC09AC82718922B7A47188A3EF7CB928CA8D0EBE456FE3A763223DC25E33E">00F6EBD94579BE50A76767029C22985A752CA8C600A2BCC79EA53C32DC0EF6FB0C69D98FE2970F6DA3E2534192E1681BF7F18D0337732D9D20AAEBB1F7CF825EEA</string>
    <string name="agc_039385256A8E064A3FBA0E5DC382B8F03961789D7A12A9D0BB248FFEDD6D1470">0018D6A5C93FCBA71647E76DA3B881F1003B0DAE03CD05780D0419BF5B95D7804CC84BBEFECCD9FB63F96A21F55DC8F846F47DD2EF74086E90EA6343C3E5C0C87226397B5B4424F2EA4ABEEF38D22EAED7</string>
    <string name="agc_0692DAD5D21427E7CCE627E8DC1ED71FDB307EBDC4DFB3A554BC60FCCE38E034">00696A6A1852C888890E3772C237CF284320203B23298EE25EE0188AF1E0006D1C7E213BCA0EF0DA043EAB6D30020D29417C75550C3529F23B2139F83F477ADE4D</string>
    <string name="agc_0DC3A56C1AC03D404A409264B0AED075A38F9EB082F5057704EA33D4B5B9B9C9">00DF9ACBB02CC48EC0B86D871F13199FA917BF3A3F693AE00D767782E9E1E9D53091450E19544DAACCCDB597816961AD989154A06071A7110AA93DA826998D1FF455AA0A65327C49B5EAE4D6ED660408B4A9184372A6FD9F657726B4A75839026E</string>
    <string name="agc_109B7B0344C0EDE50A1F3332C0015C78281E801719F522B4F20FDF815A5BCC3F">00B12334D1D726DFD9B180CFBA69697A06475444F9FA626E0A62B15EAA172246680951DF374C388AF0013AFAB20B2201DD9DF5FA609592394C2D9669844E1C5A02F2C014DAA8E743431466DD117B118A4974B9517090F20816FF0FC717B71114AC</string>
    <string name="agc_1DAF2070F644F3B6CEA88178D5DA98CE4A7A380B545F415B1A228519B1E134C8">00873B62D3D272EEC5FA0818478F5F48E35867919E73772219C97E12F42FBEBC2196813A0B0A5003D0470B9C02A9DDEC48</string>
    <string name="agc_1F79ACBA9BD8A7666759524C3052C88689CBB5873811854517CBBE65DC268EAA">70A9F3095116D964D80D584A2285BC85</string>
    <string name="agc_2CF9BE2236D08368B0649449A8546AA52B2038D467F630312C146F9EA821AC2E">00ADFCE25CF9C4FBFE5EE976A5BFF7EFD5C7956BF9BA4DC7C71CB709D7BD9C56DD</string>
    <string name="agc_346F273384FE025F17324187A93E7E3BFB08DD081290E00F942EE066625A31DD">00F5BFA155B6517D28A035DDFDC866F397D5A00183ACE267ABC10CE8C423FCAA671CAD877D8A2E1F8ACEFECBC4A405689A</string>
    <string name="agc_35623988AD86DCDA34F1257D6E93F34177702C6302115D897E60D38E0816CD35">007A36ACB7C34D37E9A0BECDFC7CA9026BB5C77B047833A8ECDAB26AB1DD56B8F4AA8336ED9D9A93A5E80C91CAD04E3108</string>
    <string name="agc_3C5E7223FA10AEB1FFA081C86F85F3C23A0526877FBC6A3A77C4D36A7BA9AAB3">00B92DB281C484FF78B0F32949C27AE8D7EB11C84D71056C26C360CB94EB677FE31515419F1C33B9A123A26BDC5A89306E</string>
    <string name="agc_3D7A0A63AA0374539D58FF4B3034CF00D2353E3A780A0F85C35566E329358934">00B803CECED72E0AFE39E9BFFB15FE35FD74DD57A66A9F5F94BD610D1D4FC4F45EA2DAD4A9465B757721998FD8F0F5FD28B83A886E17BD4E4C7AA211CC66BB5AFDC15B5EEEDAF7796F1DAC6D6ECC572F034D63E999DE1EB2F7D2733BAC72091832</string>
    <string name="agc_3FC6CD8093B4922272D7E36E11F6576A13C3767B8DFE7E7C806E0B096B233E18">003F9D7425162AC6EA26ED770F73038DE5EED36D682C10BBCA5534BB2ACA6509418142A1DFA7C0596C1D8F7B9C9588C9AC</string>
    <string name="agc_42CFA4FE0F87541B3B3F9793F5D829BE381703BB99853CCC25D018996F251536">0065BEB8F2EC25B282DD25925DC6A72CF957B848299FBC709E716B3151B13A35F2</string>
    <string name="agc_432BA784B7D2E3A6C73AB69659D3300DC6258E318543A10B50EA4B770C67DAB3">00F3BCC0AD9F40C182CD1A9E66DFB179704D5BFFE8CBAFE2D6A7A16D6776A119B47473C34DB363704A5CC11A41B2913F3609D98B7B4C21A90145C19A8106115C8C</string>
    <string name="agc_4A1001369614B0D938752C6AB4967DE352A3ADD13CAE741A7DF78EE728F74136">0089AC50C01B67B6E293295DDB274973D046F25E05A18081FAB19CCB09E8058EAE</string>
    <string name="agc_4D79CE1E9E81D44FFC3CBFEC80D073F18409AAC96E2DAFB11951005E99B02EDB">001C8FF462C1B811FB0694D2E34058F6AB01652E40089078EF5192D29992CCC9C029C7F5567C068A0811C258F7DEF1E881</string>
    <string name="agc_4E59F3D37D339A997CACA4A0C457DAA94A1F044555D950F1F9835B0B6F600D38">00C5BC8CA5ADA42E5DE010F80273A8A762A58C13BDD076EA956CB65CD5C9A38F2F</string>
    <string name="agc_52C6C717F2BEA9936D7DEDC27E412B9E7AC9A6642A6D0AEE353B2B14737100F5">006B89BCA33163540955EA43A2D0727055732D45D0C8A469CC9CF0177024C647666F29FFED41FB13B66D8D1F3A0499F162</string>
    <string name="agc_55A14C88686718883C90D427958F540EC05210E430ED915D772D8F34C350D08B">007B246F4CDFF4FDDDEB06274966A21FA4536DEA926A2945F6696D06C773C21457C7C1B58F8DB82EA0E0F7D78E96C8FD7A54B686F80607859A1AA502F5061A166E</string>
    <string name="agc_56BB9FCDF7DAFDC12F18BE8BF765769B14E090D615353A1FF24238CC17EF2F2F">0078472036E72F52B002E4ADC8B7C5DBB887A0FD8A48A30AC3E02BB4558F6D9CE72E4449397F640D731C181F27FCF6C391697EA5CE0552ED514C639A536E898D98</string>
    <string name="agc_5B1EF301F6E8D26793B9699E972C1FE3B4563543360C2A380F9C42CED9967B7B">00D5BFA5F18E5F472F8AA9E9897C13F096B425E443157EA0A5608ACFD73EFF80FA752B587FD6C00D0F66546B2F6B9A793897F008F156E086FCD225142CD02D8FADA43FA904FAFB8657FD7E2118114761E927DD7121DEC440A320F9AD5E3BD24855</string>
    <string name="agc_5B5AF298A58B98DB86A04DB0E3B1924F7EAC7A14CA781F042E5F999BD413CC9E">00463F9315BF1382545CA443CA9BF0EF77F5F4BB5E879BD5B67B780F9BFFE174A5E7E28A6008899B8B09490E81641D7B5F</string>
    <string name="agc_63F3255D837430EC4C799B2B5A8091A554A101C6FAC114907463E723AF33B544">00BD8C24B4CA84FAB0CB80ADCE3DC6740D6715E32D047CD0CC5624EACC3630F719CCD71C194AD15392C7B50D4E1D5F505246CB2FC27F14C059A27DCF742A589D2FB52569479488E19AE3287DFAA5F2D360DB4CAA3CB83C559B856431009E86C8E0DE5F33DFDE335D93AD5BB26495E28D980CEC9B6DE8BBFF6A053014855C425BB21405E3FD87CC2EFD27DB4AD15CF2E0174D1CD26FC748282D7FAEB00E86D2A8CBED4DD16E12114387CCBE5FE1D4BF882A00FC751EEC857449971934D3B994A96F6D456C79AAFE78529899937F055BC560917116E992808F6D00F78CB981880F38</string>
    <string name="agc_66412D70318648FA3BDD00A3CB2E73EE439F788EBA8010232B3B145A1ADE18F4">00452765B212A8EB871E31EF8508D52CB25988B775ABFCB3805042635E7D8818850A617DA8E68E87FE66734F6BA01051B3</string>
    <string name="agc_69589FA8E5257AA8E3C477503B5586F4B4981C77F69B612318E3FC7AF1B00890">00D3B9C75A5694E0585FF74F15E3DFE09ADB0BD99A1B4F55FCF4FC52B3ECF70502AE58A565DBF9BD770087A75B9FB9851D</string>
    <string name="agc_6D239E4C2FF1354F6DBB62ED715B0B2A4058A2C1B368EB9F5FAF8B457ED28FA6">00694368F764C7BC44135395399BA8C1D01F52215474FCEB08DD238411502C6D86A05D1780C66EDE5BE4F3BA741313A7D69AAAD0E155802EEDC582AB336C54D9AF</string>
    <string name="agc_6DC2F1E7B3508CE97B8A34B184EAD19FADAAC83160422DE0BA2F78B0438C6A98">0066E2BEB5A2EBC7920FEBADD82330D85F2FD1834F8B36373C6387D6EFE07EBA619C7C368585C2AA628FDA6C736E0FF099</string>
    <string name="agc_7946AE46AB6C7F8CBDCAF61B99109C7C5309E95125FEA7458FBF603EC34F79F0">00F08005FEB4DDE4C816CFA7072C22C7570D4AFB722C3DC08CEC129439F140DBB9</string>
    <string name="agc_7AE336DAB422A03E8E8A5A88C60ACA96939FAAC47AFC07F2870F0CAD9FB9C952">00E9B5393721E0929F22459D401F1090FDC4BA8667726569108027524FFFF0E70D1DD1B3ACE96D829C3328F07DE71A1FC40336C19D343672CB18FA306678C38C60</string>
    <string name="agc_82EF8D63B2BE36159522C21C4D086D73D713FEEEE73A9F1FAF569DFCE12A4EAD">0036A3F0BE0E8CE6E504C9C395F27ECEC484BE1DE49D1CDAF7CDB194986F04B2FA4CF738E17230C8DBDE99393D2333E0CAD19D714791B70702325370D1FD8E0650</string>
    <string name="agc_836CE23119A6E21FA622B66B25341D1D32735FAA2839B33D60C4D59B7AD62151">00F012B5CE094A43C0C796DE71CDEA428723B7D924AA70881DFCADE015BAF03D8BAB37F6D959E62CC762686142C42649FE1E6B20B5383D69CBA74B4D459A14C752</string>
    <string name="agc_840FE2348B9312C51373EFB2E2F030D10C43688DDE98467C8DD63AC7DC1855AB">00829283F2F44F235AA51B88CCCEA147B7BD2F815FCC40C7245B05B526D961A8B7</string>
    <string name="agc_864E57EAF6D5DB70BE861700AFF6C17A93A9D202732BCB4048B0CDBB6EBF578F">00526153DAFAEF09D8F38D67871EA918AC879A4874A5B3BA2BE7BDA3B5D612CE8F5E08B4CFEC0ADE71D6AA0814DACBB365AD82EEF3F98B3A1A21832B36E011F51F</string>
    <string name="agc_8CBEB54DD45F5D2D07C517A93D2C07AC37E088876F07FDDF2D74CEFF5500AE68">0085BFC41D6C64953A1A3C0DDFEB4F14B394A00F9921C7D750C64651FF87E18614BD1EFBA53115456701A8919E77F4B871</string>
    <string name="agc_8EC943399EB9730C69A7B8E4E46D24911E8F900AC2F52A3DF251327694CD8EFA">0019F269A6A1A4E68520F1863DCF26C490674FE7A971CDF09D33D16FF950AE1AC3202A73178DB129946D0CF3029756E0128796C50295007C31D69945E36D7F8D01</string>
    <string name="in_bakcell_card_secure_sub_title">Confirmation of your card transactions with a one-time code sent via SMS</string>
    <string name="in_bakcell_card_secure_title">3D Secure</string>
    <string name="in_filter_apply">Apply</string>
    <string name="in_filter_operation_history_current_date">Current date</string>
    <string name="in_filter_operation_history_custom_date">Custom date</string>
    <string name="in_filter_operation_history_date">Date</string>
    <string name="in_filter_operation_history_from_history">From</string>
    <string name="in_filter_operation_history_last_30_days">Last 30 Days</string>
    <string name="in_filter_operation_history_last_7_days">Last 7 Days</string>
    <string name="in_filter_operation_history_others">Others</string>
    <string name="in_filter_operation_history_previous_month">Previous month</string>
    <string name="in_filter_operation_history_to_history">To</string>
    <string name="in_filter_operation_history_type">Types</string>
    <string name="in_fingerprint_reset">Reset</string>
    <string name="in_login_continue">Continue</string>
    <string name="in_my_subscriptions_tab_item_voice">Call</string>
    <string name="in_terms_dialog_close">Close</string>
    <string name="in_vat_amount_percent">VAT amount, 18%</string>
    <string name="in_vat_chek_amount">The amount of the receipt</string>
    <string name="in_vat_enter_fiscal_id">Enter fiscal ID</string>
    <string name="in_vat_fiscal_code">Fiscal code</string>
    <string name="in_vat_fiscal_dialog_desc">No need to wait 90 minutes to add the receipt. Just scan the QR code on the receipt. You may add it manually after 90 minutes have passed from the creation of the receipt. If the receipt is not found within 7 days from the date of issue, contact the State Tax Service.</string>
    <string name="in_vat_fiscal_dialog_subtitle">Example</string>
    <string name="in_vat_fiscal_dialog_title">Sample of location on a receipt</string>
    <string name="in_vat_fiscal_id">Fiscal ID of the receipt</string>
    <string name="in_vat_fiscal_id_info">Sample of location on a receipt</string>
    <string name="in_vat_okay">Clear</string>
    <string name="in_vat_ready_to_send_request">The request is ready to be sent</string>
    <string name="in_vat_reject">Reject</string>
    <string name="in_vat_return_price">Amount to be refunded</string>
    <string name="in_vat_shopping_date">Date of purchase</string>
    <string name="in_vat_to_verify">Confirmation</string>
    <string name="in_vat_verify">Confirm</string>
    <string name="internet">Internet</string>
    <string name="package_type_sms">SMS</string>
</resources>