<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_usage_history_detail_filter_0" android:layout_width="fill_parent" android:layout_height="fill_parent" android:animateLayoutChanges="true"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Headline" android:textColor="?colorOnBackground" android:id="@id/historyDateTypeTitleTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_filter_operation_history_date" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.chip.ChipGroup android:orientation="horizontal" android:id="@id/historyDateChipGroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginHorizontal="16.0dip" app:chipSpacing="4.0dip" app:layout_constraintTop_toBottomOf="@id/historyDateTypeTitleTxt" app:singleSelection="true">
        <com.google.android.material.chip.Chip android:id="@id/currentRb" android:tag="binding_1" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_filter_operation_history_current_date" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/last7Rb" android:tag="binding_2" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_filter_operation_history_last_7_days" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/last30Rb" android:tag="binding_3" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_filter_operation_history_last_30_days" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/previousMonthRb" android:tag="binding_4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_filter_operation_history_previous_month" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/customDateRb" android:tag="binding_5" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_filter_operation_history_custom_date" style="@style/Widget.Bakcell.Chip.Outlined" />
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/dateFromTil" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/in_filter_operation_history_from_history" android:layout_marginStart="16.0dip" app:endIconMode="none" app:layout_constraintEnd_toStartOf="@id/dateToTil" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/historyDateChipGroup" style="@style/Widget.Bakcell.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/dateFromEditText" android:tag="binding_6" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="none" style="@style/Widget.Bakcell.TextInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout android:id="@id/dateToTil" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:hint="@string/in_filter_operation_history_to_history" android:layout_marginHorizontal="16.0dip" app:endIconMode="none" app:endIconTint="?colorOnBackground" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/dateFromTil" app:layout_constraintTop_toBottomOf="@id/historyDateChipGroup" style="@style/Widget.Bakcell.TextInputLayout">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/dateToEditText" android:tag="binding_7" android:focusable="false" android:layout_width="fill_parent" android:layout_height="wrap_content" android:inputType="none" style="@style/Widget.Bakcell.TextInputEditText" />
    </com.google.android.material.textfield.TextInputLayout>
    <androidx.constraintlayout.widget.Group android:id="@id/customDateGroup" android:tag="binding_8" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="dateFromTil,dateToTil" />
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Headline" android:textColor="?colorOnBackground" android:id="@id/historyTypeTitleTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_filter_operation_history_type" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/dateToTil" />
    <com.google.android.material.chip.ChipGroup android:orientation="horizontal" android:id="@id/historyTypeChipGroup" android:paddingBottom="180.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginHorizontal="16.0dip" app:chipSpacing="4.0dip" app:layout_constraintTop_toBottomOf="@id/historyTypeTitleTxt" app:singleSelection="true">
        <com.google.android.material.chip.Chip android:id="@id/internetRb" android:tag="binding_9" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/internet" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/callRb" android:tag="binding_10" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_my_subscriptions_tab_item_voice" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/smsRb" android:tag="binding_11" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/package_type_sms" style="@style/Widget.Bakcell.Chip.Outlined" />
        <com.google.android.material.chip.Chip android:id="@id/othersRb" android:tag="binding_12" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_filter_operation_history_others" style="@style/Widget.Bakcell.Chip.Outlined" />
    </com.google.android.material.chip.ChipGroup>
    <com.google.android.material.button.MaterialButton android:id="@id/applyBtn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="16.0dip" android:text="@string/in_filter_apply" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toTopOf="@id/resetBtn" style="@style/Widget.Bakcell.Button" />
    <com.google.android.material.button.MaterialButton android:id="@id/resetBtn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:layout_marginBottom="16.0dip" android:text="@string/in_fingerprint_reset" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0" style="@style/Widget.Bakcell.Button.Secondary" />
</androidx.constraintlayout.widget.ConstraintLayout>