<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_vat_fiscal_id_info_0" android:paddingBottom="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/closeImgBtn" android:background="?actionBarItemBackground" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_margin="8.0dip" android:src="@drawable/ic_dialog_close" android:contentDescription="@string/in_terms_dialog_close" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Title3" android:textColor="?colorOnBackground" android:id="@id/titleTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="44.0dip" android:text="@string/in_vat_fiscal_dialog_title" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.Caption1" android:textSize="12.0sp" android:textColor="?colorOnBackground" android:id="@id/subTitleTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_fiscal_dialog_subtitle" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/titleTxt" />
    <ImageView android:id="@id/fiscalImg" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:src="@drawable/ic_fiscal_id" android:scaleType="fitCenter" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/subTitleTxt" />
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.FootNote" android:textSize="13.0sp" android:textColor="?colorOnBackground" android:id="@id/descTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_fiscal_dialog_desc" android:alpha="0.6" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/fiscalImg" />
    <com.google.android.material.button.MaterialButton android:textAppearance="@style/TextAppearance.Bakcell.Bold.SubHeadline" android:id="@id/closeBtn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/in_vat_okay" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/descTxt" style="@style/Widget.Bakcell.Button.Secondary" />
</androidx.constraintlayout.widget.ConstraintLayout>