<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="bottom" android:layout_width="fill_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Title3" android:textColor="@color/bkc_color_text_primary" android:id="@id/titleTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="40.0dip" android:text="@string/in_bakcell_card_secure_title" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.FootNote" android:textColor="@color/bkc_color_text_secondary" android:id="@id/subTitleTxt" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_bakcell_card_secure_sub_title" android:layout_marginHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/titleTxt" />
    <com.google.android.material.button.MaterialButton android:id="@id/closeBtn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="16.0dip" android:text="@string/in_terms_dialog_close" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@id/subTitleTxt" style="@style/Widget.Bakcell.Button.Secondary" />
</androidx.constraintlayout.widget.ConstraintLayout>