<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:tag="layout/fragment_vat_verify_0" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageButton android:id="@id/closeImgBtn" android:background="?actionBarItemBackground" android:layout_width="40.0dip" android:layout_height="40.0dip" android:layout_margin="8.0dip" android:src="@drawable/ic_close_24" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Headline" android:id="@id/titleTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/in_vat_to_verify" app:layout_constraintBottom_toBottomOf="@id/closeImgBtn" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/closeImgBtn" />
    <androidx.constraintlayout.widget.ConstraintLayout android:background="@drawable/ic_vat_verify" android:paddingTop="16.0dip" android:paddingBottom="32.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginHorizontal="16.0dip" android:paddingHorizontal="16.0dip" app:layout_constraintTop_toBottomOf="@id/titleTxt">
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.SubHeadline" android:id="@id/subTitleTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_ready_to_send_request" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.Caption1" android:textColor="?colorDescription" android:gravity="center_vertical" android:id="@id/dateLabelTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_shopping_date" android:drawablePadding="12.0dip" app:drawableStartCompat="@drawable/ic_date_24dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/subTitleTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Caption1" android:textColor="?colorOnBackground" android:id="@id/dateValueTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="21.02.2022" app:layout_constraintBottom_toBottomOf="@id/dateLabelTxt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/dateLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.Caption1" android:textColor="?colorDescription" android:gravity="center_vertical" android:id="@id/fiscalLabelTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_fiscal_code" android:drawablePadding="12.0dip" app:drawableStartCompat="@drawable/ic_check" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/dateLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Caption1" android:textColor="?colorOnBackground" android:id="@id/fiscalValueTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="GbFGK3dzGWz2" app:layout_constraintBottom_toBottomOf="@id/fiscalLabelTxt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/fiscalLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.Caption1" android:textColor="?colorDescription" android:gravity="center_vertical" android:id="@id/amountLabelTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_chek_amount" android:drawablePadding="12.0dip" app:drawableStartCompat="@drawable/ic_manat" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/fiscalLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Caption1" android:textColor="?colorOnBackground" android:id="@id/amountValueTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="8.09 ₼" app:layout_constraintBottom_toBottomOf="@id/amountLabelTxt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/amountLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.Caption1" android:textColor="?colorDescription" android:gravity="center_vertical" android:id="@id/vatLabelTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_amount_percent" android:drawablePadding="12.0dip" app:drawableStartCompat="@drawable/ic_pie_24dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/amountLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Caption1" android:textColor="?colorOnBackground" android:id="@id/vatValueTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="1.23 ₼" app:layout_constraintBottom_toBottomOf="@id/vatLabelTxt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/vatLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Regular.Caption1" android:textColor="?colorDescription" android:gravity="center_vertical" android:id="@id/refundLabelTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16.0dip" android:text="@string/in_vat_return_price" android:drawablePadding="12.0dip" app:drawableStartCompat="@drawable/ic_return_24dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/vatLabelTxt" />
        <com.google.android.material.textview.MaterialTextView android:textAppearance="@style/TextAppearance.Bakcell.Bold.Caption1" android:textColor="?colorOnBackground" android:id="@id/refundValueTxt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0.18 ₼" app:layout_constraintBottom_toBottomOf="@id/refundLabelTxt" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/refundLabelTxt" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <com.google.android.material.button.MaterialButton android:id="@id/acceptBtn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="16.0dip" android:text="@string/in_vat_verify" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toTopOf="@id/rejectBtn" style="@style/Widget.Bakcell.Button" />
    <com.google.android.material.button.MaterialButton android:id="@id/rejectBtn" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:layout_marginBottom="16.0dip" android:text="@string/in_vat_reject" android:layout_marginHorizontal="16.0dip" app:layout_constraintBottom_toBottomOf="parent" style="@style/Widget.Bakcell.Button.Secondary" />
</androidx.constraintlayout.widget.ConstraintLayout>